<resources>
    <string name="app_name">CE481_HW4_SirenaMurphree</string>
    <string name="api">API</string>
    <string name="permission">Permission</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="spin_sign">
        <item>Aries</item>
        <item>Taurus</item>
        <item>Gemini</item>
        <item>Cancer</item>
        <item>Leo</item>
        <item>Virgo</item>
        <item>Libra</item>
        <item>Scorpio</item>
        <item>Sagittarius</item>
        <item>Capricorn</item>
        <item>Aquarius</item>
        <item>Pisces</item>
    </string-array>
    <string-array name="spin_day">
        <item>today</item>
        <item>yesterday</item>
        <item>tomorrow</item>
    </string-array>
<string name="horoscope">Horoscope API</string>
    <string name="sign">Sign</string>
    <string name="day">Day</string>
    <string name="date_range">Date Range</string>
    <string name="current_date">Current Date</string>
    <string name="description">Description</string>
    <string name="compatibility">Compatibility</string>
    <string name="mood">Mood</string>
    <string name="color">Color</string>
    <string name="lucky_number">Lucky Number</string>
</resources>