<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_api"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api" />

    <Button
        android:id="@+id/button_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/permission" />

    <Button
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/library" />
</LinearLayout>